--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="libs/sortable.min.js"></script>
     <script src='components/player/player.js'></script>
     <script src='components/playlist/playlist.js'></script>
     <script src='components/library/library.js'></script>
